# apps/api/src/instructor/dto/instructor-response.dto.ts
@@ -1,0 +1,18 @@
+import { ApiProperty } from '@nestjs/swagger'
+
+export class InstructorResponseDto {
+  @ApiProperty({ type: String })
+  id: string
+
+  @ApiProperty({ type: String, required: false })
+  userId?: string
+
+  @ApiProperty()
+  name: string
+
+  @ApiProperty()
+  bio: string
+
+  @ApiProperty()
+  imageUrl: string
+}
